--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv>=1.0.1
 google-cloud-aiplatform>=1.70.0
 google-cloud-storage>=2.18.2
 langchain-google-vertexai>=2.0.0
+langchain-google-genai>=2.0.0
 langchain-chroma>=0.1.4
 langchain-community>=0.3.0
 langchain-text-splitters>=0.3.0
